--- a/templates/perun/attendance.html.twig
+++ b/templates/perun/attendance.html.twig
@@ -2,13 +2,17 @@
 
 {% set libHighcharts=1 %}
 
-{% block title %}{{ parent() }} - Serveur DCS {{ instance.id }}{% endblock %}
+{% block title %}{{ parent() }} - Serveur DCS {{ server.name }}{% endblock %}
 
 {% block pageContent %}
     <div class="container container-main pt-3 pb-3 mb-3">
         <div class="row ml-1 mr-1">
             <div class="page-header">
-                <h1 id="tables">Statistiques du serveur {{ instance.id }}</h1>
+                <h1>
+                    <a id="tables" href="{{ path('perun_instance', {'server': server.code}) }}">
+                        Statistiques du serveur {{ server.name }}
+                    </a>
+                </h1>
             </div>
         </div>
     </div>
