--- a/templates/perun/instance.html.twig
+++ b/templates/perun/instance.html.twig
@@ -2,15 +2,15 @@
 
 {% set libHighcharts=1 %}
 
-{% block title %}{{ parent() }} - Serveur DCS {{ instance.id }}{% endblock %}
+{% block title %}{{ parent() }} - Serveur DCS {{ server.name }}{% endblock %}
 
 {% block pageContent %}
     <div class="container container-main pt-3 pb-3 mb-3">
         <div class="row mb-3 ml-1 mr-1">
             <div class="page-header">
-                <h1 id="tables">Joueurs connectés au serveur {{ instance.id }}</h1>
+                <h1 id="tables">Joueurs connectés au serveur {{ server.name }}</h1>
             </div>
-            <h3>Mission: {{ instance.mission }}</h3>
+            <h3>Mission: {{ server.perunInstance.mission }}</h3>
             <table class="table table-striped table-bordered table-hover">
                 <thead>
                 <tr>
@@ -77,7 +77,7 @@
             <div class="col-md-12">
                 <div id="history24h" style="min-width: 400px; height: 300px; margin: 0 auto"></div>
                 <div class="float-right">
-                    <a href="{{ path('perun_instance_attendance', {'instance': instance.id}) }}">plus de stats ...</a>
+                    <a href="{{ path('perun_instance_attendance', {'server': server.code}) }}">plus de stats ...</a>
                 </div>
             </div>
         </div>
