admin users (imported from slmod), close #146

--- a/templates/admin/dcs/player/remove_link.html.twig
+++ b/templates/admin/dcs/player/remove_link.html.twig
@@ -1,5 +1,6 @@
 {% extends 'admin/layout.html.twig' %}
-{% set section="dcs" %}
+{% set libKilikTable=true %}
+{% set section="admin" %}
 {% set subSection="perun-player" %}
 
 {% block pageContent %}
@@ -7,31 +8,24 @@
         <div class="col-md-6">
             <div class="bs-component">
                 <div class="card mb-3">
-                    <h3 class="card-header">Modifier le joueur DCS (Perun)</h3>
+                    <h3 class="card-header">Supprimer le lien</h3>
                     <div class="card-body">
-                        <table class="table">
-                            <tr>
-                                <td>
-                                    Dernier Pseudo:
-                                </td>
-                                <td>
-                                    {{ player.lastName }}
-                                </td>
-                            </tr>
-                        </table>
+                        <div class="alert alert-warning">
+                            Supprimer le lien entre le joueur {{ player.nickname }} ({{ player.ucid }}) et l'utilisateur {{ player.user.nickname }} ?
+                        </div>
                         {{ form_start(form) }}
                         {{ form_rest(form) }}
                         {{ form_errors(form) }}
                         <div class="row">
                             <div class="col-sm-6">
-                                <a href="{{ path('admin_dcs_perun_player_view', {'player': player.id}) }}"
+                                <a href="{{ path('admin_dcs_player_view', {'player': player.id}) }}"
                                    class="btn btn-lg btn-primary form-control">
                                     <i class="fa fa-arrow-circle-left"></i> Annuler
                                 </a>
                             </div>
                             <div class="col-sm-6">
                                 <button class="btn btn-lg btn-danger form-control " type="submit">
-                                    <i class="fa fa-save"></i> Enregistrer
+                                    <i class="fa fa-save"></i> Supprimer
                                 </button>
                             </div>
                         </div>
