--- a/templates/admin/dcs/player/edit.html.twig
+++ b/templates/admin/dcs/player/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'admin/layout.html.twig' %}
-{% set section="dcs" %}
-{% set subSection="perun-player" %}
+{% set section="admin" %}
+{% set subSection="player" %}
 
 {% block pageContent %}
     <div class="row mb-4">
         <div class="col-md-6">
             <div class="bs-component">
                 <div class="card mb-3">
-                    <h3 class="card-header">Modifier le joueur DCS (Perun)</h3>
+                    <h3 class="card-header">Modifier le joueur DCS (SLMOD)</h3>
                     <div class="card-body">
                         <table class="table">
                             <tr>
@@ -15,7 +15,15 @@
                                     Dernier Pseudo:
                                 </td>
                                 <td>
-                                    {{ player.lastName }}
+                                    {{ player.nickname }}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    UCID:
+                                </td>
+                                <td>
+                                    {{ player.ucid }}
                                 </td>
                             </tr>
                         </table>
@@ -24,7 +32,7 @@
                         {{ form_errors(form) }}
                         <div class="row">
                             <div class="col-sm-6">
-                                <a href="{{ path('admin_dcs_perun_player_view', {'player': player.id}) }}"
+                                <a href="{{ path('admin_dcs_player_view', {'player': player.id}) }}"
                                    class="btn btn-lg btn-primary form-control">
                                     <i class="fa fa-arrow-circle-left"></i> Annuler
                                 </a>
