--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -84,6 +84,12 @@
             <div class="sidebar-heading">
                 DCS
             </div>
+            <li class="nav-item{% if section == "dcs" and subSection == "player" %} active{% endif %}">
+                <a class="nav-link" href="{{ path("admin_dcs_player_list") }}">
+                    <i class="fas fa-users"></i>
+                    <span>Joueurs (SLMOD)</span>
+                </a>
+            </li>
             <li class="nav-item{% if section == "dcs" and subSection == "perun-player" %} active{% endif %}">
                 <a class="nav-link" href="{{ path("admin_dcs_perun_player_list") }}">
                     <i class="fas fa-users"></i>
@@ -98,13 +104,13 @@
             </li>
             <li class="nav-item{% if section == "dcs" and subSection == "variant" %} active{% endif %}">
                 <a class="nav-link" href="{{ path("admin_dcs_variant_list") }}">
-                    <i class="fas fa-cubes"></i>
+                    <i class="fas fa-cube"></i>
                     <span>Variants</span>
                 </a>
             </li>
             <li class="nav-item{% if section == "dcs" and subSection == "server" %} active{% endif %}">
                 <a class="nav-link" href="{{ path("admin_dcs_server_list") }}">
-                    <i class="fas fa-users"></i>
+                    <i class="fas fa-server"></i>
                     <span>Serveurs</span>
                 </a>
             </li>
