--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -4,7 +4,7 @@
 {% block head %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ cdn_veaf }}/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/custom.css?version={{ app_version }}">
+    <link rel="stylesheet" href="/css/custom.css?version={{ app_version }}{% if app.environment == "dev" %}&t={{ "now"|date("YmdHis") }}{% endif %}">
 
     {% if google_agent is not empty %}
         <script type="text/javascript">
