--- a/templates/user/view.html.twig
+++ b/templates/user/view.html.twig
@@ -15,6 +15,56 @@
             {% endif %}
         </h1>
     </div>
+    {% if totalHours > 0 %}
+        <div class="container container-main mb-3">
+            <div class="row justify-content-center">
+                <div class="col-lg-4 pt-3">
+                    <div class="card text-white bg-dark card-stats">
+                        <div class="card-header">Total heures</div>
+                        <div class="card-body">
+                            <i class="fa fa-clock fa-4x"></i>
+                            <div class="float-right card-stats-text text-right">
+                                {{ totalHours | number_format(1, '.', ' ') }} h
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 pt-3">
+                    <div class="card text-white bg-dark card-stats">
+                        <div class="card-header">Avion favori</div>
+                        <div class="card-body">
+                            {% if morePlayedAircraft is not null and morePlayedAircraft.module is not null %}
+                                <i class="fa fa-plane fa-4x"></i>
+                                <div class="float-right card-stats-text text-right">
+                                    {{ morePlayedAircraft.module.name }}<br/>
+                                    <small>{{ morePlayedAircraft.totalHours | number_format(1, '.', ' ') }} h</small>
+                                </div>
+                            {% else %}
+                                <div class="text-center">
+                                    <i>sans informations</i>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 pt-3">
+                    <div class="card text-white bg-dark mb-3 card-stats">
+                        <div class="card-header">Hélicoptère favori</div>
+                        <div class="card-body">
+                            {% if morePlayedHelicopter is not null and morePlayedHelicopter.module is not null %}
+                                <i class="fa fa-helicopter fa-4x"></i>
+                                {{ morePlayedHelicopter.module.name }}<br/>
+                                <small>{{ morePlayedHelicopter.totalHours | number_format(1, '.', ' ') }} h</small>
+                            {% else %}
+                                <div class="text-center">
+                                    <i>sans informations</i>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>    {% endif %}
     <div class="container container-main pt-3 pb-3 mb-3">
         <h1>Modules</h1>
 
