--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -13,7 +13,7 @@
             <div class="col-lg-12">
                 <p class="text-center">Bienvenue sur le site Internet de la</p>
                 <p class="text-center"><img src="{{ cdn_veaf }}/img/Logo_veaf.png"></p>
-                <p class="text-center display-4">Virtual European Air Force.</p>
+                <p class="text-center display-4" style="font-weight: bold">Virtual European Air Force.</p>
             </div>
         </div>
     </div>
