--- a/templates/default/_header.html.twig
+++ b/templates/default/_header.html.twig
@@ -9,9 +9,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="news"><span
-                                class="fa fa-newspaper"></span> Les nouvelles
-                        <span class="caret"></span></a>
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="news">
+                        <span class="fa fa-newspaper"></span>
+                        <span class="d-lg-none d-xl-inline">Les nouvelles</span>
+                    </a>
                     <div class="dropdown-menu" aria-labelledby="news">
                         <a href="https://discord.gg/KSgGtcFQ" class="dropdown-item" target="_blank"><span
                                     class="fab fa-discord"></span> Discord</a>
@@ -20,14 +21,16 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a href="https://community.veaf.org/" class="nav-link" target="_blank"><span
-                                class="fa fa-envelope"></span>
-                        Forum</a>
+                    <a href="https://community.veaf.org/" class="nav-link" target="_blank">
+                        <span class="fa fa-envelope"></span>
+                        <span class="d-lg-none d-xl-inline">Forum</span>
+                    </a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="association"><span
-                                class="fa fa-hotel"></span> Association
-                        <span class="caret"></span></a>
+                                class="fa fa-hotel"></span>
+                        <span class="d-lg-none d-xl-inline">Association</span>
+                    </a>
                     <div class="dropdown-menu" aria-labelledby="association">
                         {# @todo, refacto with cms menu builder #}
                         <a class="dropdown-item"
@@ -46,9 +49,10 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="webstv"><span
-                                class="fa fa-tv"></span> Webs TV
-                        <span class="caret"></span></a>
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="webstv">
+                        <span class="fa fa-tv"></span>
+                        <span class="d-lg-none d-xl-inline">Webs TV</span>
+                    </a>
                     <div class="dropdown-menu" aria-labelledby="webstv">
                         <a class="dropdown-item"
                            href="https://www.youtube.com/channel/UCEF1A_q8Cnw9JLW_Rlig3OQ/featured" target="_blank">
@@ -59,15 +63,17 @@
                 <li class="nav-item">
                     <a href="{{ path("perun_index") }}" class="nav-link" title="{{ connectedUsers }} joueur(s) connecté(s)">
                         <span class="fa fa-server"></span>
-                        Serveurs
+                        <span class="d-lg-none d-xl-inline">Serveurs</span>
                         {% if connectedUsers > 0 %}
                             <span class="badge badge-pill badge-danger">{{ connectedUsers }}</span>
                         {% endif %}
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{{ path("roster") }}" class="nav-link"><span class="fa fa-plane"></span>
-                        Pilotes</a>
+                    <a href="{{ path("roster") }}" class="nav-link">
+                        <span class="fa fa-plane"></span>
+                        <span class="d-lg-none d-xl-inline">Pilotes</span>
+                    </a>
                 </li>
                 {% if app.user %}
                     <li class="nav-item dropdown">
