normalize icons of connected users, close #117

--- a/templates/perun/instance.html.twig
+++ b/templates/perun/instance.html.twig
@@ -36,10 +36,10 @@
                                     {% if onlinePlayer.player.user is not null %}
                                         {% if onlinePlayer.player.user.member %}
                                             <i class="fa fa-user text-success" title="Membre"></i>
-                                        {% elseif onlinePlayer.player.user.status == constant('\\App\\Entity\\UserModule::LEVEL_ROOKIE') %}
-                                            <i class="fa fa-book-reader text-success" title="Débutant"></i>
+                                        {% elseif onlinePlayer.player.user.status == constant('\\App\\Entity\\User::STATUS_CADET') %}
+                                            <i class="fa fa-user-graduate text-primary" title="Cadet"></i>
                                         {% else %}
-                                            <i class="fa fa-user text-primary" title="Invité"></i>
+                                            <i class="fa fa-user text-info" title="Invité"></i>
                                         {% endif %}
                                         <a href="{{ path('user_view', {'user': onlinePlayer.player.user.nickname}) }}">{{ onlinePlayer.player.user.nickname }}</a>
                                     {% else %}
