handle long name for modules

--- a/templates/admin/module/view.html.twig
+++ b/templates/admin/module/view.html.twig
@@ -21,6 +21,14 @@
                             </tr>
                             <tr>
                                 <td>
+                                    Nom long:
+                                </td>
+                                <td>
+                                    {{ module.longName }}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
                                     Code:
                                 </td>
                                 <td>
