--- a/templates/user/view.html.twig
+++ b/templates/user/view.html.twig
@@ -36,7 +36,7 @@
                             {% if morePlayedAircraft is not null and morePlayedAircraft.module is not null %}
                                 <i class="fa fa-plane fa-4x"></i>
                                 <div class="float-right card-stats-text text-right">
-                                    {{ morePlayedAircraft.module.name[:8] }}<br/>
+                                    {{ morePlayedAircraft.module.name }}<br/>
                                     <small>{{ morePlayedAircraft.totalHours | number_format(1, '.', ' ') }} h</small>
                                 </div>
                             {% else %}
@@ -54,7 +54,7 @@
                             {% if morePlayedHelicopter is not null and morePlayedHelicopter.module is not null %}
                                 <i class="fa fa-helicopter fa-4x"></i>
                                 <div class="float-right card-stats-text text-right">
-                                    {{ morePlayedHelicopter.module.name[:8] }}<br/>
+                                    {{ morePlayedHelicopter.module.name }}<br/>
                                     <small>{{ morePlayedHelicopter.totalHours | number_format(1, '.', ' ') }} h</small>
                                 </div>
                             {% else %}
