fix longnames in profile

--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -65,7 +65,7 @@
                         {% endif %}
                         <tr>
                             <td id="module-{{ module.id }}">
-                                {{ module.name }}
+                                {{ module.longName }}
                                 <div class="float-right">
                                     <div class="btn-group mr-3">
                                         <button class="btn {% if myModule is not null and myModule.active %}btn-success{% else %}btn-secondary{% endif %}"
